Sun Jun  2 22:08:17 1996  Tom Yu  <tlyu@mit.edu>

	* configure.in, Makefile.in: only link getdtablesize.o if needed

Thu Mar 28 21:07:20 1996  Ken Raeburn  <raeburn@cygnus.com>

	* ftpcmd.y: Define unix for HP-UX.

Mon Mar 18 12:12:20 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Add AC_HEADER_STDARG

	* ftpcmd.y, ftpd.c: Declard STDARG if HAVE_STDARG_H is
		declared. 

Fri Mar 15 14:16:41 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* ftpd.c (auth_data): Do not fail if last gss_service is not
		present in keytab. If no services present, return a useful
		minor error status.

Fri Mar 15 01:24:39 1996  Richard Basch  <basch@lehman.com>

        * configure.in, ftpd.c: Added shadow password support.

Wed Mar 13 20:05:52 1996  Mark Eichin  <eichin@cygnus.com>

	* ftpd.c (auth_data): use gethostbyname to canonicalize local host
	name, just like krb5_sname_to_principal does.

Fri Feb 16 15:51:59 1996  Mark Eichin  <eichin@cygnus.com>

	* ftpcmd.y (yylex): error handling changes from kbalk@hp.com.

Tue Jan 16 18:44:42 1996  Mark Eichin  <eichin@cygnus.com>

	* ftpd.c (user): 331 is more appropriate for kuserok failure.

Wed Feb  7 13:33:41 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (clean): Remove ftpd

Thu Jan 18 18:39:06 1996  Sam Hartman  <hartmans@zygorthian-space-raiders.MIT.EDU>

	* configure.in: Check for crypt in -lcrypt

	* ftpd.c: Conditionalize sys_errlist

	* configure.in: Check to declare sys_errlist.

Thu Jan 18 14:55:42 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* ftpd.c : Only return an unable to acquire credentials error if all possible services fail.

Sun Jan 14 02:58:42 1996  Mark Eichin  <eichin@cygnus.com>

	* ftpd.c (auth_data): call gss_release_cred on the server_creds we
	acquired, before they leave scope.

Sun Jan 14 02:47:19 1996  Karri Balk - Contractor <kbalk@cup.hp.com>

	* ftpd.c (gss_services): list of gssapi service names to try.
	(auth_data): loop over gss_services.
